--- a/styles/prism-theme.css
+++ b/styles/prism-theme.css
@@ -7,7 +7,7 @@ code[class*='language-'] {
     'Courier New', monospace;
   direction: ltr;
   text-align: left;
-  white-space: pre-line;
+  white-space: pre;
   word-spacing: normal;
   word-break: normal;
   line-height: 1.5;
@@ -283,5 +283,5 @@ pre[class*='language-'] > code[class*='language-'] {
   z-index: 0;
   pointer-events: none;
   line-height: inherit;
-  white-space: pre-line;
+  white-space: pre;
 }
